# app-android/app/src/main/kotlin/com/algoritmico/passepartout/abi/models/ChangelogEntry.kt
@@ -1,0 +1,47 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.algoritmico.passepartout.abi.models
+
+
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Contextual
+
+/**
+ * 
+ *
+ * @param id 
+ * @param comment 
+ * @param issue 
+ */
+@Serializable
+
+data class ChangelogEntry (
+
+    @SerialName(value = "id")
+    val id: kotlin.Int,
+
+    @SerialName(value = "comment")
+    val comment: kotlin.String,
+
+    @SerialName(value = "issue")
+    val issue: kotlin.Int? = null
+
+) {
+
+
+}
+
