# app-apple/Sources/AppResources/Resources.swift
@@ -28,18 +28,18 @@ public enum Resources {
     }
 
     // Do not expose this to views, use AppConfiguration.constants from environment
-    static let constants = Bundle.module.unsafeDecode(ABI.AppConstants.self, filename: "Constants")
+    static let constants = Bundle.module.unsafeDecode(ABI.AppConstants.self, filename: "constants")
 
-    public static let credits = Bundle.module.unsafeDecode(ABI.Credits.self, filename: "Credits")
+    public static let credits = Bundle.module.unsafeDecode(ABI.Credits.self, filename: "credits")
 
     public static let issueTemplate: String = {
         do {
-            guard let templateURL = Bundle.module.url(forResource: "Issue", withExtension: "txt") else {
-                fatalError("Unable to find Issue.txt in Resources")
+            guard let templateURL = Bundle.module.url(forResource: "issue", withExtension: "txt") else {
+                fatalError("Unable to find issue.txt in Resources")
             }
             return try String(contentsOf: templateURL)
         } catch {
-            fatalError("Unable to parse Issue.txt: \(error)")
+            fatalError("Unable to parse issue.txt: \(error)")
         }
     }()
 
